...
      );
      setAuth(auth);
      await saveAuth(auth);
      return null;
    } catch (e) {
      debugPrint('login error: $e');
      return "There was an error logging in";
    }
  }

  Future<String?> logout() async {
    final auth = await getAuth();

...
